Dark Mode Button Fix

--- a/30DaysOfJavaScript/style.css
+++ b/30DaysOfJavaScript/style.css
@@ -83,9 +83,10 @@ body.light-mode svg {
   position: absolute;
   top: 0;
   margin: 10px;
-  padding: 10px;
+  padding: 5px;
   border: none;
-  border-radius: 20px;
+  border-radius: 50%;
+  font-size: 30px;
 }
 
 h1 {
